# libclem

./: .travis.yml  CMakeLists.txt  CodeCoverage.cmake  CodeCoverage.rst  LICENSE  README.md  README.rst  TestCForIEEE754.c  TestCForIEEE754.cmake  TestCForIEEE754.rst
CMake/Modules/: README.md
cmake/modules/: CodeCoverage.cmake  CodeCoverage.rst  DeployFramework.cmake  PrependPath.cmake  README.md  SetInstallDirectories.cmake  SetInstallDirectories.rst  TestCForIEEE754.cmake  TestCForNeedsLibM.c  TestCForNeedsLibM.cmake  TestFloatBigEndian.c  TestFloatBigEndian.cmake
src/: CMakeLists.txt  det3x3.h  error.h  matrix3x3f_buffer.h
src/clem/: det3x3.c  det3x3.h  error.h  fsum.c  fsum.h  math-private.h  matrix3x3f_buffer.c  matrix3x3f_buffer.h
tests/: CMakeLists.txt  det3x3f_test.c  fsumf_test.c  matrix3x3f_buffer_test.c  test.h  test_driver.c  unit_tests.c.in  unit_tests.h  unit_tests_forward.h.in
